# miniouto

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml
.omo/run-continuation/: ses_0e39f0aadffeJ58ExpbA4psH8a.json  ses_0f26e1b4cffeE5PhOiFXSjwC8S.json  ses_0f26e1b73ffeyL7B9vce1Kq0we.json  ses_0f26e1ba3ffeeXBBnbSYWULDYU.json  ses_0f26e1bd4ffeofUqBF7eUi874S.json  ses_0f26f342cffeUuOwgHhtFzfitj.json  ses_0fc396b69ffeTh6zUF8jLA9Yx0.json  ses_0fcfe41aaffeql1xc3a4MXKYv5.json
docs/: README.md  architecture.md  automation.md  cli.md  core.md  development.md  lma.md  skills.md  storage.md  styles.md  tools.md  usage.md
src/miniouto/: __init__.py  paths_runtime.py
src/miniouto/cli/: __init__.py  chat.py  lma.py  provider.py  skill.py  style.py  tui.py
src/miniouto/core/: __init__.py  chat.py  context.py  error_rules.py  events.py  lma.py  providers.py  runtime.py
src/miniouto/default_style/: claude.md  codebuff.md  codex.md  default.md  oh-my-opencode.md  opencode.md
src/miniouto/storage/: __init__.py  paths.py  providers.py  sessions.py  settings.py  skills.py  styles.py  toml_io.py
src/miniouto/tools/: __init__.py  _normalize.py  bash.py  delete.py  edit.py  media.py  registry.py  write.py
