[project]
name = "miniouto"
version = "0.1.3"
description = "A minimal, file-driven CLI agent harness built on coreouto."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "miniouto" }]
keywords = ["agent", "llm", "cli", "coreouto", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "coreouto[all]>=0.10.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "textual>=0.80.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "tomli-w>=1.0.0",
]

[project.scripts]
miniouto = "miniouto.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miniouto"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]
